# FPA-T2

./: .env.example  .gitignore  POST_IMPLEMENTATION_AUDIT.md  README.md
.github/workflows/: ci.yml
backend/: main.py  pyproject.toml  startup.py
backend/core/: bq_client.py  config.py
backend/migrations/: bq_migrate.py
backend/models/: ri.py
backend/routers/: ri_config.py  ri_entry.py  ri_masters.py
backend/seed/: gsheets_reader.py  masters_data.py  seed_import.py  seed_masters.py
backend/seed/data/: masters.json
backend/services/: ppr_service.py  ri_config_service.py  ri_entry_service.py
backend/tests/: conftest.py  test_bq_migrate.py  test_e2e_ri_flow.py  test_health.py  test_masters_api.py  test_models.py  test_performance_edge.py  test_ppr_integration.py  test_seed_guard.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: ri.ts
frontend/src/pages/: RIConfigEditorPage.tsx  RIConfigListPage.tsx  RIEntryGridPage.tsx  RIEntrySelectorPage.tsx
frontend/src/types/: ri.ts
